--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <div class="container">
         <!-- MUHIM: "api.gif" nomli faylni ushbu HTML fayl bilan bir papkaga joylashtiring -->
-        <img src="api.gif" alt="API animatsiyasi" class="header-gif">
+        <img src="api.mp4" alt="API animatsiyasi" class="header-gif">
         
         <!-- Yuklab olish tugmasi -->
         <a href="https://github.com/salomsalor939-arch/oiladavrasi/releases/download/1.0.0/OILA_TEST.apk" class="download-btn" download>Oila Testi ilovasini yuklab olish uchun yuklab olish tugmasini bosing</a>
