--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <img src="api.gif" alt="API animatsiyasi" class="header-gif">
         
         <!-- Yuklab olish tugmasi -->
-        <a href="https://github.com/salomsalor939-arch/oiladavrasi/releases/download/1.0.0/OILA_TEST.apk" class="download-btn" download>Oila Testi ilovasini yuklab olish uchun yuklab olish tugmasini bosing</a>
+        <a href=""https://github.com/salomsalor939-arch/oiladavrasi/releases/download/1.0.0/OILA_TEST.apk" class="download-btn" download>Oila Testi ilovasini yuklab olish uchun yuklab olish tugmasini bosing</a>
         
         <!-- AI haqida izoh -->
         <p class="ai-notice">AI qo'shilmagan</p>
